<resources>
    <string name="app_name">KASTECA</string>

    <!-- stringhe per la MainActivity -->
    <string name="Email_text">Email</string>
    <string name="Password_text">Password</string>
    <string name="Login_text">LOGIN</string>
    <string name="Create_New_Account_Text">Non hai ancora un account? Creane uno</string>
    <string name="Insert_correct_data">Perfavore, inserisci i dati corretti</string>
    <string name="Try_Again">Perfavore, riprova</string>
    <string name="Login_Failed">Login fallito</string>
    <string name="Dialog_neutral_button_login_failed">OK</string>
    <string name="Login_Successful">Login eseguito con successo!</string>
    <string name="desc_unisannio">Logo Unisannio</string>
    <string name="desc_kasteca">Logo app</string>

    <!-- stringhe per la RegistrationActivity -->
    <string name="Registration_Failed">Registrazione fallita</string>
...
    <string name="Already_A_Member_Text">Sei già iscritto? Vai al Login</string>
    <string name="Not_Correct_Fields">I campi non sono stati riempiti correttamente</string>
    <string name="dominio_unisannio">\u0040unisannio.it</string>
    <string name="dominio_studenti_unisannio">\u0040studenti.unisannio.it</string>

    <!-- stringhe per la LogDocenteActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_corsi">Corsi</string>
    <string name="menu_aggiungi_corso">Aggiungi Corso</string>
    <string name="nome_drower">nome</string>
    <string name="email_drower">email</string>
    <string name="desc_profilo">Immagine profilo</string>
...
    <string name="menu_visualizza_richieste_studente">Visualizza Richieste Studenti</string>

    <!-- stringhe per la CorsoStudenteActivity -->
    <string name="menu_cancellazione_dal_corso">Abbandona il Corso</string>
    <string name="Dialog_titolo_conferma_cancellazione">Sei sicuro di voler abbandonare il corso?</string>
    <string name="Dialog_descrizione_conferma_cancellazione">Cosi facendo perderai tutti i dati relativi al corso</string>
    <string name="Dialog_button_si_conferma_cancellazione">Si</string>
    <string name="Dialog_button_no_conferma_cancellazione">No</string>
    <string name="Dialog_titolo_corretta_cancellazione">La cancellazione è avvenuta con successo</string>
    <string name="Dialog_titolo_incorretta_cancellazione">La cancellazione non è avvenuta con successo, riprova</string>
    <string name="Dialog_button_ok_cancellazione">OK</string>


...
