...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_kasteca" />


    <EditText
        android:id="@+id/Email_Edit_Text"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="49dp"
        android:hint="@string/Email_text"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_Edit_Text"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/button"
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="49dp"
        android:background="@color/colorButton"
...
